Bug 1002513 - Clamp gain to zero in PannerNode to avoid inverting the phase when the distance is greater than maxDistance. r=